# helix-threading-profile-contact

./: .gitignore  README.MD  pyproject.toml
data/example/: contact_matrix.tsv  contact_table.tsv  helix1_msa.fasta  helix2_msa.fasta  helix3_msa.fasta  loops.json  sequence.fasta
src/helix_threader/: cli.py
src/helix_threader/io/: contact_matrix.py  contact_table.py  fasta.py  loops.py
src/helix_threader/models/: contacts.py  problem.py  profile.py
src/helix_threader/reporting/: explain_solution.py  writer.py
src/helix_threader/scoring/: contact_energy.py  profile_score.py  total_score.py
src/helix_threader/search/: brute_force.py  fix_and_search.py  scan_profiles.py
tests/: test_contact_energy.py  test_end_to_end.py  test_io.py  test_profile.py
