[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-threader"
version = "0.1.0"
description = "Helix threading with profile (PSSM) + contact energy + loop constraints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
helix-thread = "helix_threader.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
